tests/bad_programs/type_errors/redecl_same_stm_after_block.nc
int main() {
    int a = 43;
    {
        double d;
    }
    int b, a;
    return 0;
}
